--- a/perl/Changes
+++ b/perl/Changes
@@ -1,7 +1,7 @@
 # Revision history for Perl module YAMLScript
 ---
-version: 0.0.12_001
-date:    Sun 24 Jul 2022 06:45:45 AM PDT
+version: 0.0.12_002
+date:    Sun 24 Jul 2022 01:44:00 PM PDT
 changes:
 - Fix remaining obscure test failures
 ---
